--- a/index.html
+++ b/index.html
@@ -1,372 +1,293 @@
 <!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>space_voyage</title>
-  <style>
-    /* ===== 원본 디자인 캔버스 크기(고정) ===== */
-    :root{
-      --W: 2100;
-      --H: 1050;
-    }
-    html,body{height:100%; margin:0; background:#111;}
-    body{display:grid; place-items:center; overflow:hidden;}
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>space_voyage</title>
 
-    /* ===== 브라우저에 맞게 스케일링되는 스테이지 ===== */
-    .viewport{
-      width: 100vw;
-      height: 100vh;
-      display:grid;
-      place-items:center;
-    }
-    .stage{
-      position: relative;
-      width: calc(var(--W) * 1px);
-      height: calc(var(--H) * 1px);
-      transform-origin: top left;
-      /* JS가 scale 값을 넣어줌 */
-    }
-    .bg{
-      position:absolute; inset:0;
-      width:100%; height:100%;
-      object-fit: contain;
-      user-select:none;
-      pointer-events:none; /* 배경은 클릭 막기 */
-    }
-
-    /* 오버레이: 여기 위에 클릭/입력 요소를 “정확한 픽셀 좌표”로 올림 */
-    .overlay{
-      position:absolute; inset:0;
-    }
-
-    /* ===== 클릭 영역(투명 버튼) 공통 ===== */
-    .hit{
-      position:absolute;
-      background: rgba(255,255,255,0.0); /* 개발 중엔 0.15로 올리면 위치 보기 쉬움 */
-      border: 0;
-      cursor: pointer;
-    }
-
-    /* ===== 중앙 로그 영역(텍스트 박스 안) ===== */
-    .log{
-      position:absolute;
-      overflow:hidden;
-      display:flex;
-      flex-direction:column;
-      gap: 12px;
-      padding: 14px;
-      /* 배경은 이미 이미지에 있으니 투명 */
-    }
-    .line{
-      height: 54px;              /* 이미지의 회색 라운드 박스 높이에 맞춰 조절 */
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font: 700 22px/1.2 system-ui, Apple SD Gothic Neo, sans-serif;
-      color: rgba(0,0,0,.75);    /* 이미지 박스가 밝으니 어두운 글자 */
-      background: rgba(255,255,255,.55); /* 이미지의 라운드 박스 느낌(원하면 투명으로) */
-      border-radius: 18px;
-    }
-
-    /* ===== 모달(시트) ===== */
-    .modal{
-      position:fixed; inset:0;
-      display:none;
-      place-items:center;
-      background: rgba(0,0,0,.65);
-      z-index: 999;
-    }
-    .modal.open{display:grid;}
-    .sheetWrap{
-  position:relative;
-
-  width: 90vw;
-  max-width: 450px;   /* ← 여기 숫자 줄이면 더 작아짐 */
-  max-height: 528vh;
-
-  aspect-ratio: 1050 / 1050; /* 시트 비율(필요하면 바꿔줌) */
+<style>
+/* ===== 기본 ===== */
+html,body{
+  margin:0; height:100%;
+  background:#111;
 }
-.sheetBg{
+body{
+  display:grid;
+  place-items:center;
+  overflow:hidden;
+  font-family: system-ui, Apple SD Gothic Neo, sans-serif;
+}
+
+/* ===== 메인 스테이지 ===== */
+.viewport{
+  width:100vw;
+  height:100vh;
+  display:grid;
+  place-items:center;
+}
+.stage{
+  position:relative;
+  transform-origin: top left;
+}
+.bg{
+  position:absolute;
+  inset:0;
   width:100%;
   height:100%;
-  object-fit: contain;
+  user-select:none;
+  pointer-events:none;
+}
+.overlay{
+  position:absolute;
+  inset:0;
 }
 
-    .sheetOverlay{
-      position:absolute; inset:0;
-    }
-    .sheetInput{
-      position:absolute;
-      border: none;
-      outline:none;
-      background: rgba(0,0,0,0);
-      color: rgba(11,73,255,.95);
-      font: 800 42px/1 system-ui, Apple SD Gothic Neo, sans-serif;
-      text-align:right;
-    }
-    .sheetName{
-      text-align:center;
-      font-size: 52px;
-    }
-    .closeBtn{
-      position:absolute;
-      right: 2%;
-      top: 2%;
-      width: 56px;
-      height: 56px;
-      border-radius: 14px;
-      border:1px solid rgba(255,255,255,.25);
-      background: rgba(0,0,0,.25);
-      color:#fff;
-      cursor:pointer;
-      font-weight:900;
-    }
+/* 클릭 영역 */
+.hit{
+  position:absolute;
+  background:rgba(255,255,255,0);
+  border:0;
+  cursor:pointer;
+}
 
-    /* 개발 편의: F2 누르면 히트박스 보이게 */
-    body.debug .hit{ background: rgba(0,255,255,.15); outline: 1px solid rgba(0,255,255,.7); }
-    body.debug .log{ outline: 1px dashed rgba(255,255,0,.8); }
-  </style>
+/* ===== 로그 ===== */
+.log{
+  position:absolute;
+  overflow:hidden;
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+  padding:12px;
+}
+.line{
+  height:50px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:20px;
+  font-weight:700;
+  color:rgba(0,0,0,.75);
+  background:rgba(255,255,255,.55);
+  border-radius:16px;
+}
+
+/* ===== 시트 모달 ===== */
+.modal{
+  position:fixed;
+  inset:0;
+  display:none;
+  place-items:center;
+  background:rgba(0,0,0,.65);
+  z-index:999;
+}
+.modal.open{ display:grid; }
+
+.sheetViewport{
+  width:92vw;
+  height:92vh;
+  display:grid;
+  place-items:center;
+}
+.sheetStage{
+  position:relative;
+  transform-origin: top left;
+}
+.sheetBg{
+  position:absolute;
+  inset:0;
+  width:100%;
+  height:100%;
+  user-select:none;
+  pointer-events:none;
+}
+.sheetInput{
+  position:absolute;
+  border:none;
+  outline:none;
+  background:transparent;
+  color:#0b49ff;
+  font-weight:800;
+  font-size:64px;
+  text-align:right;
+}
+.sheetName{
+  text-align:center;
+}
+
+/* 디버그(F2) */
+body.debug .hit{
+  background:rgba(0,255,255,.2);
+  outline:1px solid cyan;
+}
+</style>
 </head>
+
 <body>
-  <div class="viewport">
-    <div class="stage" id="stage">
-      <!-- ✅ 네가 만든 메인 이미지 그대로 -->
-      <img class="bg" src="main.png" alt="main ui" />
 
-      <div class="overlay">
-        <!-- ====== (1) 왼쪽 NAME 클릭 영역 ====== -->
-        <button class="hit" id="hitNameL"
-          style="left: 330px; top: 880px; width: 520px; height: 120px;"></button>
+<!-- ===== 메인 ===== -->
+<div class="viewport">
+  <div class="stage" id="stage">
+    <img id="mainBg" class="bg" src="main.png">
 
-        <!-- ====== (2) 오른쪽 NAME 클릭 영역 ====== -->
-        <button class="hit" id="hitNameR"
-          style="left: 1250px; top: 880px; width: 520px; height: 120px;"></button>
+    <div class="overlay">
 
-        <!-- ====== (3) 왼쪽 스탠딩 이미지 영역 클릭(파일 선택) ====== -->
-        <input class="hit" id="fileL" type="file" accept="image/*"
-          style="left: 120px; top: 220px; width: 420px; height: 620px; opacity:0;" />
+      <!-- 왼쪽 스탠딩 -->
+      <input class="hit" id="fileL" type="file" accept="image/*"
+        style="left:165px;top:260px;width:400px;height:800px;opacity:0">
+      <img id="standL"
+        style="position:absolute;left:165px;top:260px;width:400px;height:800px;object-fit:cover;display:none">
 
-        <!-- ====== (4) 오른쪽 스탠딩 이미지 영역 클릭(파일 선택) ====== -->
-        <input class="hit" id="fileR" type="file" accept="image/*"
-          style="left: 1560px; top: 220px; width: 420px; height: 620px; opacity:0;" />
+      <!-- 오른쪽 스탠딩 -->
+      <input class="hit" id="fileR" type="file" accept="image/*"
+        style="left:1535px;top:260px;width:400px;height:800px;opacity:0">
+      <img id="standR"
+        style="position:absolute;left:1535px;top:260px;width:400px;height:800px;object-fit:cover;display:none">
 
-        <!-- ====== (5) 스탠딩 이미지 실제 표시 레이어(이미지 위에 올림) ====== -->
-        <img id="standL" style="position:absolute; left:120px; top:220px; width:420px; height:620px; object-fit:cover; display:none;" />
-        <img id="standR" style="position:absolute; left:1560px; top:220px; width:420px; height:620px; object-fit:cover; display:none;" />
+      <!-- 이름 클릭 -->
+      <button class="hit" id="nameL"
+        style="left:255px;top:1079px;width:221px;height:92px"></button>
+      <button class="hit" id="nameR"
+        style="left:1625px;top:1079px;width:221px;height:92px"></button>
 
-        <!-- ====== (6) 중앙 로그 영역(문장 박스 들어갈 자리) ====== -->
-        <div class="log" id="log"
-          style="left: 720px; top: 250px; width: 660px; height: 520px;"></div>
+      <!-- 로그 -->
+      <div class="log" id="log"
+        style="left:640px;top:260px;width:820px;height:800px"></div>
 
-        <!-- ====== (7) ‘다음’ 삼각형 버튼 클릭 영역 ====== -->
-        <button class="hit" id="btnNext"
-          style="left: 1030px; top: 930px; width: 120px; height: 80px;"></button>
-
-        <!-- (선택) 항해 N일째 텍스트를 HTML로 따로 띄우고 싶다면 여기 -->
-        <!-- <div id="dayText" style="position:absolute; left:860px; top:920px; width:380px; text-align:center; color:#9aa3b2; font:700 34px system-ui;">항해 0일째</div> -->
+      <!-- 항해 일수 -->
+      <div id="dayText"
+        style="position:absolute;left:929px;top:1152px;width:242px;height:36px;
+               display:flex;align-items:center;justify-content:center;
+               color:rgba(255,255,255,.55);font-size:24px;font-weight:700">
+        항해 0일째
       </div>
+
+      <!-- 다음 버튼 -->
+      <button class="hit" id="next"
+        style="left:1194px;top:1152px;width:36px;height:36px"></button>
+
     </div>
   </div>
+</div>
 
-  <!-- ===== 시트 모달 ===== -->
-  <div class="modal" id="modal">
-    <div class="sheetWrap">
-      <img class="sheetBg" src="sheet.png" alt="sheet ui" />
-      <button class="closeBtn" id="close">✕</button>
+<!-- ===== 시트 ===== -->
+<div class="modal" id="modal">
+  <div class="sheetViewport">
+    <div class="sheetStage" id="sheetStage">
+      <img id="sheetBg" class="sheetBg" src="sheet.png">
 
-      <div class="sheetOverlay" id="sheetOverlay">
-        <!-- 아래 좌표는 “예시”야. 네 시트 이미지에 맞춰 x/y/width/height만 바꾸면 끝 -->
-        <input class="sheetInput sheetName" id="f_name"
-          style="left: 10%; top: 10%; width: 80%; height: 8%;" placeholder="NAME" />
+      <!-- 닫기 -->
+      <button class="hit" id="close"
+        style="left:930px;top:55px;width:70px;height:70px"></button>
 
-       <input class="sheetInput statValue" id="f_str" style="top:28%" />
-<input class="sheetInput statValue" id="f_con" style="top:38%" />
-<input class="sheetInput statValue" id="f_int" style="top:48%" />
-<input class="sheetInput statValue" id="f_luk" style="top:58%" />
-<input class="sheetInput statValue" id="f_aff" style="top:68%" />
-<input class="sheetInput statValue" id="f_san" style="top:78%" />
+      <!-- 이름 -->
+      <input class="sheetInput sheetName" id="f_name"
+        style="left:411px;top:79px;width:229px;height:95px">
 
-      </div>
+      <!-- 능력치 -->
+      <input class="sheetInput" id="f_str" style="left:654px;top:275px;width:121px;height:84px" value="0">
+      <input class="sheetInput" id="f_con" style="left:654px;top:419px;width:121px;height:84px" value="0">
+      <input class="sheetInput" id="f_int" style="left:654px;top:563px;width:121px;height:84px" value="0">
+      <input class="sheetInput" id="f_luk" style="left:654px;top:707px;width:121px;height:84px" value="0">
+      <input class="sheetInput" id="f_aff" style="left:654px;top:851px;width:121px;height:84px" value="0">
+      <input class="sheetInput" id="f_san" style="left:654px;top:995px;width:121px;height:84px" value="0">
     </div>
   </div>
+</div>
 
 <script>
-  /* ====== 스케일 자동 계산(2100×1050을 화면에 맞춤) ====== */
-  const stage = document.getElementById('stage');
-  function rescale(){
-    const W = 2100, H = 1050;
-    const sx = window.innerWidth / W;
-    const sy = window.innerHeight / H;
-    const s = Math.min(sx, sy);
-    stage.style.transform = `scale(${s})`;
-  }
-  window.addEventListener('resize', rescale);
-  rescale();
+/* ===== 상태 ===== */
+let day = 0;
+let launched = false;
+let editing = 'L';
 
-  /* ====== 상태 ====== */
-  const MAX_LINES = 8;
-  let day = 0;
-  let launched = false;
-  let editSide = 'L';
+const state = {
+  ship:'우주선',
+  L:{name:'왼쪽 캐릭터',aff:0,str:0},
+  R:{name:'오른쪽 캐릭터',aff:0,str:0}
+};
 
-  const state = {
-    ship: '우주선 이름',
-    L: { name:'(A 이름)', str:0, con:0, int:0, luk:0, aff:0, san:0 },
-    R: { name:'(B 이름)', str:0, con:0, int:0, luk:0, aff:0, san:0 }
-  };
+const $ = id=>document.getElementById(id);
 
-  const $ = (id)=>document.getElementById(id);
-  const clamp99 = (v)=>Math.max(0, Math.min(99, parseInt(v||0,10) || 0));
+/* ===== 스케일 ===== */
+function fit(el,img){
+  const w = img.naturalWidth;
+  const h = img.naturalHeight;
+  el.style.width = w+'px';
+  el.style.height = h+'px';
+  const s = Math.min(innerWidth/w, innerHeight/h);
+  el.style.transform = `scale(${s})`;
+}
+$('mainBg').onload = ()=>fit($('stage'),$('mainBg'));
+$('sheetBg').onload = ()=>{
+  const img=$('sheetBg'),st=$('sheetStage');
+  const s=Math.min(
+    $('sheetViewport').clientWidth/img.naturalWidth,
+    $('sheetViewport').clientHeight/img.naturalHeight
+  );
+  st.style.width=img.naturalWidth+'px';
+  st.style.height=img.naturalHeight+'px';
+  st.style.transform=`scale(${s})`;
+};
+addEventListener('resize',()=>{
+  if(mainBg.naturalWidth)fit(stage,mainBg);
+  if(sheetBg.naturalWidth)sheetBg.onload();
+});
 
-  /* ====== 로그 ====== */
-  function pushLine(text){
-    const el = document.createElement('div');
-    el.className = 'line';
-    el.textContent = text;
-    $('log').appendChild(el);
-    while($('log').children.length > MAX_LINES){
-      $('log').removeChild($('log').firstElementChild);
-    }
-  }
-  function startIfNeeded(){
-    if(launched) return;
-    $('log').innerHTML = '';
-    pushLine(`${state.L.name}님이 ${state.ship}에 탑승하였습니다.`);
-    pushLine(`${state.R.name}님이 ${state.ship}에 탑승하였습니다.`);
-    pushLine(`${state.ship}이 발사되었습니다.`);
-    launched = true;
-    day = 1;
-  }
-
-  /* ====== 간단 이벤트 ====== */
-  function avgLove(){ return (state.L.aff + state.R.aff)/2; }
-  function loveHigh(){ return state.L.aff >= 70 && state.R.aff >= 70; }
-  function loveLow(){ return state.L.aff <= 25 && state.R.aff <= 25; }
-  function powerGap(){ return state.L.str - state.R.str; }
-  function calm(){ return (state.L.san + state.R.san + state.L.int + state.R.int)/4; }
-  function pick(arr){ return arr[Math.floor(Math.random()*arr.length)]; }
-
-  const E = {
-    lovers: [
-      () => `두 사람의 관계가 연인으로 발전했습니다.`,
-      () => `${state.L.name}님이 ${state.R.name}님에게 조심스레 손을 내밉니다.`,
-      () => `${state.R.name}님이 ${state.L.name}님의 침묵을 받아줍니다.`
-    ],
-    fight: [
-      () => `${state.L.name}님과 ${state.R.name}님이 싸웁니다.`,
-      () => `사소한 말 한마디가 도화선이 되었습니다.`
-    ],
-    neutral: [
-      () => `${state.ship}의 엔진 소리가 일정한 박자로 울립니다.`,
-      () => `소형 운석 파편이 방어막에 부딪혀 흩어집니다.`
-    ],
-    bad: [
-      () => `${state.ship}의 산소 필터가 막히기 시작합니다.`,
-      () => `통신에 잡음이 늘어납니다.`
-    ],
-    good: [
-      () => `${state.L.name}님과 ${state.R.name}님이 협력해 작은 고장을 해결했습니다.`,
-      () => `${state.ship}이 예상보다 빠르게 항로를 안정화했습니다.`
-    ]
-  };
-
-  function step(){
-    startIfNeeded();
-
-    // 연인 이벤트 (한 번만)
-    if(loveHigh()){
-      pushLine(pick(E.lovers)());
-      day++;
-      return;
-    }
-
-    const tension =
-      (avgLove()<35 ? 1:0) +
-      (Math.abs(state.L.aff - state.R.aff)>40 ? 1:0) +
-      (calm()<45 ? 1:0);
-
-    const conflict = Math.random() < (0.16 + 0.10*tension);
-
-    if(conflict){
-      pushLine(pick(E.fight)());
-      const gap = powerGap();
-      const bias = (gap/99)*0.35 + ((state.L.luk - state.R.luk)/99)*0.15;
-      const Lwins = Math.random() < (0.5 + bias);
-      pushLine(`${Lwins ? state.L.name : state.R.name}님이 싸움에서 승리했습니다.`);
-      state.L.aff = clamp99(state.L.aff - (Lwins ? 4 : 7));
-      state.R.aff = clamp99(state.R.aff - (Lwins ? 7 : 4));
-    }else{
-      const roll = Math.random();
-      if(roll < 0.22) pushLine(pick(E.bad)());
-      else if(roll < 0.44) pushLine(pick(E.good)());
-      else pushLine(pick(E.neutral)());
-    }
+/* ===== 로그 ===== */
+function push(t){
+  const d=document.createElement('div');
+  d.className='line';
+  d.textContent=t;
+  log.appendChild(d);
+  while(log.children.length>15)log.firstChild.remove();
+}
+function step(){
+  if(!launched){
+    log.innerHTML='';
+    push(`${state.L.name}님이 ${state.ship}에 탑승하였습니다.`);
+    push(`${state.R.name}님이 ${state.ship}에 탑승하였습니다.`);
+    push(`${state.ship}이 발사되었습니다.`);
+    launched=true;
+    day=1;
+  }else{
+    push(`${state.ship}의 항해가 계속됩니다.`);
     day++;
   }
+  dayText.textContent=`항해 ${day}일째`;
+}
 
-  /* ====== 시트 모달 ====== */
-  const modal = $('modal');
-  function openSheet(side){
-    editSide = side;
-    const c = state[side];
-    $('f_name').value = c.name;
-    $('f_str').value = c.str;
-    $('f_con').value = c.con;
-    $('f_int').value = c.int;
-    $('f_luk').value = c.luk;
-    $('f_aff').value = c.aff;
-    $('f_san').value = c.san;
-    modal.classList.add('open');
-  }
-  function closeSheet(){ modal.classList.remove('open'); }
+/* ===== 이벤트 ===== */
+next.onclick=step;
 
-  $('hitNameL').addEventListener('click', ()=>openSheet('L'));
-  $('hitNameR').addEventListener('click', ()=>openSheet('R'));
-  $('close').addEventListener('click', closeSheet);
-  modal.addEventListener('click', (e)=>{ if(e.target===modal) closeSheet(); });
+/* ===== 시트 ===== */
+function openSheet(side){
+  editing=side;
+  modal.classList.add('open');
+  f_name.value=state[side].name;
+}
+nameL.onclick=()=>openSheet('L');
+nameR.onclick=()=>openSheet('R');
+close.onclick=()=>modal.classList.remove('open');
 
-  // 입력값 저장: blur 때 반영(원하면 저장 버튼으로 바꿔도 됨)
-  function bindSheet(){
-    function save(){
-      const c = state[editSide];
-      c.name = ($('f_name').value || '').trim() || c.name;
-      c.str = clamp99($('f_str').value);
-      c.con = clamp99($('f_con').value);
-      c.int = clamp99($('f_int').value);
-      c.luk = clamp99($('f_luk').value);
-      c.aff = clamp99($('f_aff').value);
-      c.san = clamp99($('f_san').value);
-    }
-    ['f_name','f_str','f_con','f_int','f_luk','f_aff','f_san'].forEach(id=>{
-      $(id).addEventListener('change', save);
-      $(id).addEventListener('blur', save);
-    });
-  }
-  bindSheet();
+f_name.onchange=()=>state[editing].name=f_name.value;
 
-  $('btnNext').addEventListener('click', step);
+/* ===== 스탠딩 ===== */
+function bindFile(input,img){
+  input.onchange=e=>{
+    const f=e.target.files[0];
+    if(!f)return;
+    img.src=URL.createObjectURL(f);
+    img.style.display='block';
+  };
+}
+bindFile(fileL,standL);
+bindFile(fileR,standR);
 
-  /* ====== 스탠딩 이미지 로컬 선택 ====== */
-  function bindFile(fileId, imgId){
-    $(fileId).addEventListener('change', (e)=>{
-      const f = e.target.files?.[0];
-      if(!f) return;
-      const url = URL.createObjectURL(f);
-      const img = $(imgId);
-      img.src = url;
-      img.style.display = 'block';
-    });
-  }
-  bindFile('fileL','standL');
-  bindFile('fileR','standR');
-
-  /* ====== 디버그: F2로 히트박스 표시 ====== */
-  window.addEventListener('keydown', (e)=>{
-    if(e.key === 'F2'){
-      document.body.classList.toggle('debug');
-    }
-  });
+/* 디버그 */
+addEventListener('keydown',e=>{
+  if(e.key==='F2')document.body.classList.toggle('debug');
+});
 </script>
+
 </body>
 </html>
